<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_name"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pass_name"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/signButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_btn_name"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="50dp" />
    </LinearLayout>
</FrameLayout>